# Robotica-2026-2

./: README.md
practica_1/: practica_1.ipynb
practica_2/: practica_2.ipynb
proyecto_final_ws/src/final_project/: package.xml  setup.py
proyecto_final_ws/src/final_project/config/: rrr_config.rviz  scara_config.rviz
proyecto_final_ws/src/final_project/final_project/scripts/: custom_manager.py  dynamics.py  hardware_interface.py  kinematics.py  manipulator_controller.py
proyecto_final_ws/src/final_project/launch/: rrr.launch.py  scara.launch.py
proyecto_final_ws/src/final_project/urdf/: rrr_robot.urdf  scara_robot.urdf
